<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <TextView android:id="@+id/tvDroidKeyMainTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stTitulo"            
            />
        <TextView android:id="@+id/tvDroidKeyMainStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"            
            android:text="@string/stStatus"            
            />
    </LinearLayout>
    
    <ListView android:id="@+id/lvDroidKeyMainListCtrls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="true" 
        android:layout_weight="1.0"
        >
	</ListView>
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button android:id="@+id/btnAprndDroidKeyMain"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/stAprndzj"
            android:layout_weight="2.0"            
            />
<!--         <ImageButton android:id="@+id/imgBtnConfigDroidKeyMain" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="match_parent" -->
<!-- 	        android:layout_weight="1.0"             -->
<!--             android:contentDescription="@string/imgBtnConfigContDroidKeyMain" -->
<!--             android:src="@android:drawable/ic_menu_preferences"             -->
<!--             />     -->
        <ImageButton android:id="@+id/imgBtnMicDroidKeyMain"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_weight="1.0"				        	        
	        android:contentDescription="@string/contDescImgBtnDroidKey"   
			android:src="@android:drawable/ic_btn_speak_now"
        />

    </LinearLayout>
    
</LinearLayout>