<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200sp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/tvDlgAprndRlzdo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stTvInfoDlgAprndRlzdo"
        android:textSize="15sp"
        />
    
    <EditText android:id="@+id/etDlgAprndRlzdo"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLength="10"
        android:textSize="15sp"
        android:layout_marginTop="10sp"
		android:inputType="text"
        />
    
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        	<Button android:id="@+id/btnAcepDlgAprndRlzdo"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="1.0"
        	    android:text="@string/stBtnAceptDlgAprndRlzdo"
        	    />
        	<Button android:id="@+id/btnCancelDlgAprndRlzdo"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_weight="1.0"
        	    android:text="@string/stBtnCancelDlgAprndRlzdo"
        	    />        
    </LinearLayout>
        
</LinearLayout>
